// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductTitle debe de mostrar el componente con el nombre del producto 1`] = `
<div
  className="productCard undefined"
>
  <span
    className="productDescription undefined"
  >
    Hola mundo
  </span>
</div>
`;

exports[`ProductTitle debe demostrar el componente correctamente con el tityulo personalizado 1`] = `
<span
  className="productDescription undefined"
>
  Custom Product
</span>
`;
